# ROS2_CarProj

./: .gitignore  LICENSE  README.md  save_map.sh
Yubot_controller/: CMakeLists.txt  package.xml
Yubot_controller/include/: ac_controller.hpp
Yubot_controller/src/: ac_controller.cpp
bot_description/: setup.py
hybrid_astar_planner/: CMakeLists.txt  hybrid_planner_plugin.xml  package.xml
hybrid_astar_planner/include/hybrid_astar_planner/: algorithm.h  dubins.h  hybrid_astar_planner.h  node.h  rs_path.h
hybrid_astar_planner/launch/: nav2_bringup.launch.py
hybrid_astar_planner/params/: hybrid_nav2.yaml
hybrid_astar_planner/src/: algorithm.cpp  dubins.cpp  hybrid_astar_planner.cpp  rs_path.cpp
install/: local_setup.sh  map_2025-01-29_01-04-16.pgm  map_2025-01-29_01-04-16.yaml  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
sh/: carto.sh  gazebo.sh  navigation.sh
yuBot_cartographer/: CMakeLists.txt  package.xml
yuBot_nav2/: CMakeLists.txt  frames_2025-02-13_23.30.01.gv  package.xml
yubot_controller/: CMakeLists.txt  frames_2025-02-13_23.26.11.gv  plugin.xml
yubot_purepursuit_controller/: CMakeLists.txt
yubot_purepursuit_controller/install/: local_setup.sh  setup.ps1  setup.sh
yubot_purepursuit_controller/install/yubot_purepursuit_controller/share/ament_index/resource_index/nav2_core__pluginlib__plugin/: yubot_purepursuit_controller
yubot_purepursuit_controller/install/yubot_purepursuit_controller/share/ament_index/resource_index/package_run_dependencies/: yubot_purepursuit_controller
yubot_purepursuit_controller/install/yubot_purepursuit_controller/share/ament_index/resource_index/parent_prefix_path/: yubot_purepursuit_controller
yubot_purepursuit_controller/install/yubot_purepursuit_controller/share/yubot_purepursuit_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  plugin.xml
yubot_purepursuit_controller/install/yubot_purepursuit_controller/share/yubot_purepursuit_controller/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  yubot_purepursuit_controllerConfig-version.cmake  yubot_purepursuit_controllerConfig.cmake
yubot_purepursuit_controller/install/yubot_purepursuit_controller/share/yubot_purepursuit_controller/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
yubot_purepursuit_controller/install/yubot_purepursuit_controller/share/yubot_purepursuit_controller/launch/: nav2_bringup.launch.py
yubot_purepursuit_controller/install/yubot_purepursuit_controller/share/yubot_purepursuit_controller/map/: house.pgm  house.yaml
yubot_purepursuit_controller/install/yubot_purepursuit_controller/share/yubot_purepursuit_controller/params/: yuBot_nav2.yaml
yubot_purepursuit_controller/launch/: nav2_bringup.launch.py
yubot_purepursuit_controller/log/: latest_build
yubot_purepursuit_controller/map/: house.pgm
yubot_purepursuit_controller/params/: yuBot_nav2.yaml
yubot_purepursuit_controller/src/: pure_controller.cpp  pure_controller.hpp
(+102 files in other folders)
